# lux-sp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  codecov.yml
.github/workflows/: build.yml  code-checker.yml  coverity-scan.yml  sanitize.yml  unit-test.yml
cmake/: dependencies.cmake  settings.cmake  utilities.cmake
lux_sp/: CMakeLists.txt
lux_sp/private_include/lux_sp/: dummy_2.h
lux_sp/public_include/lux_sp/: dummy.h  system_calls.h  threads.h
lux_sp/src/lux_sp/: assertions.h  assertions.test.cc  concrete_no_return.h  concrete_system.h  concurrency_support.h  dummy.cc  dummy.test.cc  exit.h  exit_mock.h  invariants.h  memory_pool.h  memory_pool.test.cc  no_return.h  no_return_mock.h  predicates.h  predicates.test.cc  runtime.h  runtime_mock.h  spsc_lock_free_queue.h  system.h  system_calls.cc  system_mock.h  thread_support.h  thread_support.test.cc  threads.cc  threads.test.cc  utility.h
lux_sp/src/lux_sp/spsc/: lock_free_queue.h
lux_sp/src/lux_sp/utility/: free_functions.h  overload.h
lux_sp/test/: .clang-tidy
lux_sp/test/unit/lux_sp/: no_return_mock.h  system_mock.h  test_assertions.cc  test_concurrency_support.cc  test_memory_pool.cc  test_spsc_lock_free_queue.cc  test_thread_support.cc
lux_sp/test/unit/lux_sp/spsc/: test_lock_free_queue.cc
scripts/: run_codechecker.sh
